2011-01-19 Pierre Wieser <pwieser@trychlos.org>

	* tools/check-po.sh: Script rewriting.

	* NEWS: Update before release.

2011-01-17 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-preferences-editor.c:
	Reopen the Preferences on the last used tab.

	* src/core/na-boxed.c (na_boxed_new_from_string_with_sep):
	Fix handling of last separator.

	* src/nact/nact-schemes-list.c: Do not allow modification
	of default schemes list if preferences are locked or property
	mandatory.

	* src/core/na-io-provider.c:
	* src/core/na-io-provider.h (na_io_provider_is_conf_readable,
	na_io_provider_is_conf_writable):
	Returns mandatory flag.
	List I/O providers in write order.

	* src/core/na-updater.c (na_updater_is_item_writable): Updated accordingly.

	* src/nact/nact-providers-list.c: Do not allow modification of I/O
	providers readability/writability/write order properties if
	preferences are locked or properties mandatory.

	* src/core/na-module.c (na_module_release_modules): Release the loaded module.

2011-01-16 Pierre Wieser <pwieser@trychlos.org>

	* run-distcheck.sh: New file.

	Add a script to check completeness of header files.

	* tools/.gitignore:
	* tools/Makefile.am:
	* tools/check-headers.sh: New files.

	* src/test/test-include.c:
	Renamed as tools/check-header.c and set it as ignored by git.

	* src/test/.gitignore:
	* src/test/Makefile.am: Updated accordingly.

	* Makefile.am:
	* configure.ac: configure in tools/.

	* src/api/na-data-boxed.h:
	* src/api/na-data-types.h:
	* src/api/na-gconf-monitor.h:
	* src/api/na-gconf-utils.h: Test for NA_DISABLE_DEPRECATED deprecation define.

	* run-distcheck.sh: New file.

	* tools/check-po.sh: Rewrite to have options and messages management.

	* src/utils/na-gconf2key.sh.in: Review comment.

	* src/utils/Makefile.am: Add na-gconf2key.sh.in to the distributed files.

	* docs/reference/Makefile.am: Set the deprecation flags for gtkdoc-scan.

	* tools/check-po.sh: Set the count of errors as exit code.
